--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,1 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<h1>Sorry, an error occurred. Try again later.</h1>
