--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>WYRCAN <%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <header></header>
     <div class="main-wrapper">
-
+      <%- body %>
     </div>
     <footer></footer>
   </body>
