Add auth routes

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -14,9 +14,9 @@
   </div>
   <div class="signup-radio" id="myRadio">
     <label class="label-role student" for="checkbox-student">Student</label>
-    <input type="radio" name="checkbox-role" value="student" id="checkbox-student" />
+    <input type="radio" name="role" value="student" id="checkbox-student" />
     <label class="label-role employer" for="checkbox-employer">Employer</label>
-    <input type="radio" name="checkbox-role" value="employer" id="checkbox-employer" />
+    <input type="radio" name="role" value="employer" id="checkbox-employer" />
   </div>
   <div class="signup-btn">
     <button>Create account</button>
