--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
+<form action="auth/logout" method="POST">
+  <button>Log out</button>
+</form>
 <h1>HOME PAGE</h1>
 <p>Welcome to project</p>
+<a href="auth/signup">Sign Up</a><br>
+<a href="auth/login">Log In</a>
