Auth almost complete

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -26,5 +26,6 @@
       <div class="error"><p><%= message %></p></div>
     <% } %>
   </form>
-  <span>You already have an account? <a href="/auth/login">Log In</a></span>
+  <span>You already have an account? <a href="/auth/login">Log In</a></span><br>
+  <span>Back to <a href="/">homepage</a></span>
 </div>
