--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,5 +16,6 @@
       <button>Log In</button>
     </div>
   </form>
-  <span>You don't have an account? <a href="/auth/signup">Sign Up</a></span>
+  <span>You don't have an account? <a href="/auth/signup">Sign Up</a></span><br>
+  <span>Back to <a href="/">homepage</a></span>
 </div>
