--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
-<form action="auth/logout" method="POST">
-  <button>Log out</button>
-</form>
-<h1>HOME PAGE</h1>
-<p>Welcome to project</p>
+<h1>WYRCAN</h1>
+<p>
+  Are you a student wanting to enter in the labour market?<br>
+  Are you an employer looking for young talent?
+  <br>
+  <span>If the answer is YES Wyrcan is for you!</span>
+</p>
 <a href="auth/signup">Sign Up</a><br>
 <a href="auth/login">Log In</a>
