--- a/views/jobs/create-job.ejs
+++ b/views/jobs/create-job.ejs
@@ -9,9 +9,9 @@
         <label for="description">Job description:</label>
         <input type="description" name="description" id="description"/>
       </div>
-      <!-- <% if (typeof message !== 'undefined') { %>
+      <% if (typeof message !== 'undefined') { %>
         <p class="error"><%= message %></p>
-      <% } %> -->
+      <% } %>
       <div class="form-button">
         <button>Create</button>
       </div>
