Add my jobs and more stuff

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,7 +7,7 @@
   <body>
     <header>
       <% if(user) { %>
-      <form action="auth/logout" method="POST">
+      <form action="/auth/logout" method="POST">
         <button>Log out</button>
       </form>
       <% } %>
