my jobs population

--- a/views/my-jobs/index.ejs
+++ b/views/my-jobs/index.ejs
@@ -8,3 +8,14 @@
     </form>
     <% } %>
   </header>
+
+  
+  
+  <h2><ul>
+    <% jobs.forEach((jobs) => { %>
+      <li>
+         Job Position: <%= jobs.position %>  
+         Job Description: <%= jobs.description %> 
+      </li>
+    <% }) %>
+  </ul></h2>  
