jobs view and applicants

--- a/views/jobs/job-id.ejs
+++ b/views/jobs/job-id.ejs
@@ -7,15 +7,8 @@
         <%= job.description %>
     </div>
 </div>
-<div class='apply-form'>
-    <h2>Apply to this job</h2>
-    <form method="POST" action='/job/apply'>
-        <div class='form-textarea'>
-            <textarea rows='15' cols='50'>Tell us a little bit about yourself.
-            </textarea>
-        </div>
-        <div class='apply-button'>
-            <button>Apply</button>
-        </div>
-    </form>
+<div class='applicants'>
+    <h2>Applicants</h2>
+
 </div>
+<span>Back to <a href="/my-jobs">My Jobs</a></span>
