--- a/views/jobs/index.ejs
+++ b/views/jobs/index.ejs
@@ -3,7 +3,7 @@
   <p>You entered as a student</p>
   <div class="job-list">
     <% jobs.forEach((job) => { %>
-    <a href='jobs/<%= job._id%>'>
+    <a href='jobs/<%= job._id%>/apply'>
       <div class="job-item">
         <div class="job-position">
           <%= job.position %>
