--- a/views/jobs/job-apply.ejs
+++ b/views/jobs/job-apply.ejs
@@ -11,7 +11,7 @@
     <h2>Apply to this job</h2>
     <form method="POST" action='/jobs/<%=job._id%>/apply'>
         <div class='form-textarea'>
-            <textarea rows='15' cols='50'>Tell us a little bit about yourself.
+            <textarea rows='15' cols='50' name='application'>Tell us a little bit about yourself.
             </textarea>
         </div>
         <div class='apply-button'>
