--- a/views/jobs/job-id.ejs
+++ b/views/jobs/job-id.ejs
@@ -9,6 +9,9 @@
 </div>
 <div class='applicants'>
     <h2>Applicants</h2>
-
+    <% job.applications.forEach((applicant) => { %>
+    <p>Applicant: <%= applicant.user%></p>
+    <p>Message: <%= applicant.text%></p>
+    <% }) %>
 </div>
 <span>Back to <a href="/my-jobs">My Jobs</a></span>
