--- a/views/my-jobs/index.ejs
+++ b/views/my-jobs/index.ejs
@@ -17,6 +17,7 @@
       <li>
          Job Position: <%= job.position %>  
          Job Description: <%= job.description %> 
+         Job Status : <%= job.archive %>
       </li>
         </a>
     <% }) %>
