reviews and updates

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,5 @@
   <br>
   <span>If the answer is YES Wyrcan is for you!</span>
 </p>
-<a href="auth/signup">Sign Up</a><br>
-<a href="auth/login">Log In</a>
+<a href="/auth/signup">Sign Up</a><br>
+<a href="/auth/login">Log In</a>
