--- a/views/my-jobs/index.ejs
+++ b/views/my-jobs/index.ejs
@@ -13,7 +13,7 @@
   
   <h2><ul>
     <% jobs.forEach((job) => { %>
-        <a href='jobs/<%= job._id%>'>
+        <a href='/jobs/<%= job._id%>'>
       <li>
          Job Position: <%= job.position %>  
          Job Description: <%= job.description %> 
