--- a/views/jobs/job-apply.ejs
+++ b/views/jobs/job-apply.ejs
@@ -6,13 +6,15 @@
     <div class='job-description'>
         <%= job.description %>
     </div>
+    <div class='job-owner'>
+        <%= job.owner.name %>
+    </div>
 </div>
 <div class='apply-form'>
     <h2>Apply to this job</h2>
     <form method="POST" action='/jobs/<%=job._id%>/apply'>
         <div class='form-textarea'>
-            <textarea rows='15' cols='50' name='application'>Tell us a little bit about yourself.
-            </textarea>
+            <textarea rows='15' cols='50' name='application'>Tell us a little bit about yourself.</textarea>
         </div>
         <div class='apply-button'>
             <button>Apply</button>
