--- a/views/jobs/job-id.ejs
+++ b/views/jobs/job-id.ejs
@@ -24,7 +24,7 @@
     </div>
     <% if(job.successCandidate.id === applicant.user.id){ %>
     <div class="whatever">
-        Accepeted One
+        Candidate accepted
     </div>
     <% } %>
     <% }) %>
