--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,21 @@
-<h1>WYRCAN</h1>
-<p>
-  Are you a student wanting to enter in the labour market?<br>
-  Are you an employer looking for young talent?
-  <br>
-  <span>If the answer is YES Wyrcan is for you!</span>
-</p>
-<a href="/auth/signup">Sign Up</a><br>
-<a href="/auth/login">Log In</a>
+<div class="home-content">
+  <div class="home-title">
+    <h1>WYRCAN</h1>
+  </div>
+  <div class="home-description">
+    <p>
+      Are you a student wanting to enter in the labour market?<br>
+      Are you an employer looking for young talent?
+      <br>
+      <span>If the answer is YES Wyrcan is for you!</span>
+    </p>
+  </div>
+  <div class="home-auth">
+    <a href="/auth/signup">
+      <div class="home-signup"><span>Sign Up</span></div>
+    </a>
+    <a href="/auth/login">
+      <div class="home-login"><span>Log In</span></div>
+    </a>
+  </div>
+</div>
