--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -2,19 +2,28 @@
 <html>
   <head>
     <title>WYRCAN</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <header>
-      <% if(user) { %>
-      <form action="/auth/logout" method="POST">
-        <button>Log out</button>
-      </form>
-      <% } %>
-    </header>
     <div class="main-wrapper">
-      <%- body %>
+      <header>
+        <div class="header-logo">
+          <img src="/images/lorem-logo.png" alt="Wyrcan Logo" />
+        </div>
+        <% if(user) { %>
+        <form action="/auth/logout" method="POST">
+          <button>Log out</button>
+        </form>
+        <% } %>
+      </header>
+      <div class="content-wrapper">
+        <%- body %>
+      </div>
+      <footer>
+        Developed By <span class="footer-name">David Teixeira</span> & <span class="footer-name">Pere Amorós</span>
+      </footer>
     </div>
-    <footer></footer>
   </body>
 </html>
