edit jobs complete

--- a/views/jobs/job-id.ejs
+++ b/views/jobs/job-id.ejs
@@ -4,6 +4,9 @@
             <button>Archive</button>
         </form>
     </div>
+     <div class='edit-btn'>
+            <a href ='/jobs/<%= job._id%>/edit/'>Edit job</a>
+        </div>
     <h1>Job Details</h1>
     <div class='job-position'>
         <%= job.position %>
