--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,14 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+button {
+  border: 0px;
+  border-radius: 2px;
+  padding: 10px 15px;
+}
+input::placeholder{
+  color: #ddd;
+}
 /* -- TYPOGRAPHY -- */
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -28,10 +36,11 @@ footer{
   background: #444;
   color: white;
   text-align: center;
-  padding: 20px;
+  padding: 10px 20px;
 }
 .content-wrapper{
   padding: 20px;
+  background: #fff;
 }
 .container {
   padding: 20px;
@@ -39,6 +48,11 @@ footer{
 }
 
 /* -- COMPONENTS -- */
+.header-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .header-logo img{
   width: 50px;
 }
@@ -66,7 +80,7 @@ footer{
   color: #444;
   margin-bottom: 20px;
 }
-.form-input {
+.form-input, .form-button {
   margin-bottom: 15px;
 }
 .form-input label{
@@ -75,20 +89,52 @@ footer{
 }
 .form-input input{
   width: 100%;
-  padding: 5px;
+  padding: 10px 5px;
+  font-size: 12px;
   box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 2px;
 }
 .form-button button{
   width: 100%;
-  border-radius: 0px;
-  border: none;
+  padding: 10px 5px;
+  font-size: 14px;
   background: #35b535;
   color: #fff;
-  font-size: 14px;
-  padding: 5px 0;
+  border-radius: 2px;
+  border: none;
 }
 .error{
   color: red;
-  font-size: 10px;
+  font-size: 12px;
   text-align: center;
+}
+/* -- RadioCheckBox  -- */
+.signup-radio{
+  display: flex;
+  justify-content: space-around;
+}
+.signup-input{
+  position: relative;
+}
+.signup-input input{
+  position: absolute;
+  top: 2px;
+  left: 2px;
+}
+.signup-input label{
+  display: inline-block;
+  padding: 20px;
+  cursor:pointer;
+  border-radius:2px;
+  background: #4B8FB6;
+  color: #fff;
+}
+.signup-input input[type="radio"]:checked+label {
+  background-color: #1371A7;
+}
+.signup-input label:hover{
+  -webkit-filter: brightness(1.1) grayscale(0) opacity(1);
+     -moz-filter: brightness(1.1) grayscale(0) opacity(1);
+          filter: brightness(1.1) grayscale(0) opacity(1);
 }
