--- a/views/my-jobs/index.ejs
+++ b/views/my-jobs/index.ejs
@@ -8,9 +8,7 @@
     </form>
     <% } %>
   </header>
-
-  
-  
+<a href = '/my-jobs/archive'>Archives</a>
   <h2><ul>
     <% jobs.forEach((job) => { %>
         <a href='/jobs/<%= job._id%>'> 
