--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -13,7 +13,7 @@
       <p class="error"><%= message %></p>
     <% } %>
     <div class="form-button">
-      <button>Log In</button>
+      <button class="btn-login">Log In</button>
     </div>
   </form>
   <span>You don't have an account? <a href="/auth/signup">Sign Up</a></span>
