--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -27,7 +27,7 @@
       <div class="form-input error"><p><%= message %></p></div>
     <% } %>
     <div class="form-button">
-      <button>Create account</button>
+      <button class="btn-signup">Sign Up</button>
     </div>
   </form>
   <div>
