--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
     </p>
   </div>
   <div class="home-auth">
-    <a href="/auth/signup">
+    <a class="btn-home-signup" href="/auth/signup">
       <div class="home-signup"><span>Sign Up</span></div>
     </a>
-    <a href="/auth/login">
+    <a class="btn-home-login" href="/auth/login">
       <div class="home-login"><span>Log In</span></div>
     </a>
   </div>
