--- a/views/jobs/job-apply.ejs
+++ b/views/jobs/job-apply.ejs
@@ -1,17 +1,16 @@
 <div class='job-details'>
-    <h1>Job Details</h1>
-    <div class='job-position'>
-        <%= job.position %>
+    <div class='apply-position'>
+        <h1><%= job.position %></h1>
     </div>
-    <div class='job-description'>
-        <%= job.description %>
+    <div class='apply-description'>
+        <p><%= job.description %></p>
     </div>
-    <div class='job-owner'>
-        <%= job.owner.name %>
+    <div class='apply-owner'>
+        <span class="bold">Published by: </span><%= job.owner.name %>
     </div>
 </div>
 <div class='apply-form'>
-    <h2>Apply to this job</h2>
+    <h2>Apply to this job:</h2>
     <form method="POST" action='/jobs/<%=job._id%>/apply'>
         <div class='form-textarea'>
             <textarea rows='15' cols='50' name='application'>Tell us a little bit about yourself.</textarea>
