--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -10,7 +10,7 @@
     <div class="main-wrapper">
       <header class="header-wrapper">
         <div class="header-logo">
-          <a href="/">
+          <a href="/jobs">
             <img src="/images/lorem-logo.png" alt="Wyrcan Logo" />
           </a>
         </div>
