--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,20 +143,22 @@ button{
   padding: 5px;
 }
   /* JOBS LIST (student view) */
-.job-list a {
+.job-list a, .myjobs-list a  {
   text-decoration: none;
   color: #444;
 }
-.job-item {
-  background: rgba(0, 183, 255 , 0.3);
+.job-item, .myjobs-item {
+  background: rgba(0, 0, 0 , 0.02);
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
   margin-bottom: 10px;
   padding: 15px;
   border-radius: 2px;
 }
-.job-position h2 {
+.job-position h2, .myjobs-position h2 {
   margin-top: 0px;
 }
-.job-description p {
+.job-description p, .myjobs-description h2 {
   margin: 0;
   font-size: 12px;
 }
@@ -164,7 +166,14 @@ button{
 .apply-description, .apply-form{
   margin-bottom: 25px;
 }
-
+  /* MYJOBS (employer view)  */
+.myjobs-nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+  background: #eee;
+  padding: 20px 5px;
+}
 
 
 
