--- a/views/jobs/job-apply.ejs
+++ b/views/jobs/job-apply.ejs
@@ -5,6 +5,9 @@
     <div class='apply-description'>
         <p><%= job.description %></p>
     </div>
+    <div class='apply-salary'>
+            <p><%= job.salary %></p>
+        </div>
     <div class='apply-owner'>
         <span class="bold">Published by: </span><%= job.owner.name %>
     </div>
