--- a/views/jobs/job-id.ejs
+++ b/views/jobs/job-id.ejs
@@ -14,6 +14,9 @@
     <div class='job-description'>
         <%= job.description %>
     </div>
+    <div class='job-salary'>
+            <%= job.salary %>
+        </div>
 </div>
 <div class='applicants'>
     <h2>Applicants</h2>
