--- a/views/jobs/index.ejs
+++ b/views/jobs/index.ejs
@@ -10,5 +10,13 @@
     </div>
   </a>
 <% }) %>
+<% console.log(jobs, jobs.length, 'hola') %>
+<% if(jobs.length === 0) {%>
+  <div class="job-item">
+    <div class="job-description">
+        Looks like nobody is hiring now.
+    </div>
+  </div>
+<% } %>
 </div>
 
