--- a/views/jobs/job-apply.ejs
+++ b/views/jobs/job-apply.ejs
@@ -1,3 +1,9 @@
+<div class="myjobs-nav">
+    <div></div>
+    <div class='nav-route'>
+        <a href="/jobs">Jobs</a>
+    </div>
+</div>
 <div class='job-details'>
     <div class='apply-position'>
         <h1><%= job.position %></h1>
@@ -6,7 +12,7 @@
         <p><%= job.description %></p>
     </div>
     <div class='apply-salary'>
-            <p><%= job.salary %></p>
+        <p><span class="bold">Salary: </span><%= job.salary %></p>
         </div>
     <div class='apply-owner'>
         <span class="bold">Published by: </span><%= job.owner.name %>
@@ -23,4 +29,3 @@
         </div>
     </form>
 </div>
-<span>Back to <a href="/jobs">Jobs</a></span>
