--- a/views/jobs/edit-job.ejs
+++ b/views/jobs/edit-job.ejs
@@ -1,24 +1,29 @@
+<div class="myjobs-nav">
+  <div></div>
+  <div class='nav-route'>
+      <a href="/my-jobs">My Jobs</a>
+  </div>
+</div>
 <div class="edit-job-wrapper">
-        <h2>Edit job</h2>
-        <form method="post" action="/jobs/<%= job._id%>/edit">
-          <div class="form-input">
-            <label for="position">Job Position:</label>
-            <input type="text" name="position" id="position" value='<%= job.position%>'/>
-          </div>
-          <div class="form-input">
-            <label for="description">Job description:</label>
-            <input type="text" name="description" id="description" value='<%= job.description%>'/>
-          </div>
-          <div class="form-input">
-              <label for="salary">Job Salary:</label>
-              <input type="text" name="salary" id="salary" value='<%= job.salary%>'/>
-            </div>
-          <% if (typeof message !== 'undefined') { %>
-            <p class="error"><%= message %></p>
-          <% } %>
-          <div class="form-button">
-            <button>Update</button>
-          </div>
-        </form>
+  <h2>Edit job</h2>
+  <form method="post" action="/jobs/<%= job._id%>/edit">
+    <div class="form-input">
+      <label for="position">Job Position:</label>
+      <input type="text" name="position" id="position" value='<%= job.position%>'/>
+    </div>
+    <div class="form-input">
+      <label for="description">Job description:</label>
+      <input type="text" name="description" id="description" value='<%= job.description%>'/>
+    </div>
+    <div class="form-input">
+        <label for="salary">Job Salary:</label>
+        <input type="text" name="salary" id="salary" value='<%= job.salary%>'/>
       </div>
-      <span>Back to <a href="/my-jobs">My Jobs</a></span>
+    <% if (typeof message !== 'undefined') { %>
+      <p class="error"><%= message %></p>
+    <% } %>
+    <div class="form-button">
+      <button class="btn-update">Update</button>
+    </div>
+  </form>
+</div>
