--- a/views/my-jobs/index.ejs
+++ b/views/my-jobs/index.ejs
@@ -1,5 +1,3 @@
-<h1>Wyrcan - My Jobs</h1>
-<p>Welcome <%= user.name %>!</p>
 <div class="myjobs-nav">
   <div>
     <form action="/my-jobs" method="POST">
@@ -8,6 +6,8 @@
   </div>
   <a href = '/my-jobs/archive'>Archives</a>
 </div>
+<h1>Wyrcan - My Jobs</h1>
+<p>Welcome <%= user.name %>!</p>
 <div class="myjobs-list">
   <% jobs.forEach((job) => { %>
     <a href='/jobs/<%= job._id%>'> 
@@ -18,4 +18,11 @@
       </div>
     </a>
   <% }) %>  
+  <% if(jobs.length === 0) {%>
+    <div class="job-item">
+      <div class="job-description">
+        <p>Your jobs list is empty.<br>Try creating one by clicking the button above.</p>
+      </div>
+    </div>
+  <% } %>
 </div>
