--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <div class="home-content">
   <div class="home-title">
     <h1>WYRCAN</h1>
+    <!-- <img src="/images/logo-wyrcan.png" /> -->
   </div>
   <div class="home-description">
     <p>
