--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -26,7 +26,7 @@
         <%- body %>
       </div>
       <footer>
-        Developed By <span class="footer-name">David Teixeira</span> & <span class="footer-name">Pere Amorós</span>
+        Developed By <span class="bold">David Teixeira</span> & <span class="bold">Pere Amorós</span>
       </footer>
     </div>
   </body>
