applied and index views links

--- a/views/jobs/index.ejs
+++ b/views/jobs/index.ejs
@@ -1,3 +1,9 @@
+<div class="myjobs-nav">
+  <div></div>
+  <div class='nav-route'>
+      <a href="/applied"> My applied jobs</a>
+  </div>
+</div>
 <h1>Wyrcan - Job Offers</h1>
 <p>Welcome <%= user.name %>!</p>
 <div class="job-list">
