--- a/views/jobs/applied.ejs
+++ b/views/jobs/applied.ejs
@@ -1,24 +1,28 @@
-<div class="applied-nav">
-    <div></div>
-    <div class='nav-route'>
-        <a href="/my-jobs"> Jobs</a>
+<div class="myjobs-nav">
+<div></div>
+<div class='nav-route'>
+    <a href="/jobs"> Jobs</a>
+</div>
+</div>
+<h1>Applied Jobs</h1>
+<div class="job-list">
+<% appliedJobs.forEach((applied) => { %>
+<a href='/jobs/<%= applied._id%>/apply'>
+<div class="job-item">
+    <div class="job-position">
+    <h2>Position: <%= applied.position %></h2>
+    <p><span class='bold'>Description:</span> <%= applied.description %></p>
+    <p><span class='bold'>Salary:</span> <%= applied.salary %></p>
     </div>
-  </div>
-  <h1>Applied Jobs</h1>
-  <% appliedJobs.forEach((applied) => { %>
-    <div class="job-item">
-      <div class="job-position">
-        <h2><%= applied.position %></h2>
-        <h2><%= applied.description %></h2>
-        <h2><%= applied.salary %></h2>
-      </div>
+</div>
+</a>
+
+<% }) %>
+<% if(!appliedJobs) {%>
+<div class="job-item">
+    <div class="job-description">
+        There are no jobs applied for.
     </div>
-  <% }) %>
-  <% if(!appliedJobs) {%>
-    <div class="job-item">
-        <div class="job-description">
-          There are no jobs applied for.
-        </div>
-      </div>
-  <% } %>
-  <span>Back to <a href="/my-jobs">My Jobs</a></span>
+    </div>
+<% } %>
+</div>
